1998-07-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/amcleanup.sh.in (reporter): update to call amreport.
	(amdump.<n>) update to use the same renaming technique introduced in
 	June 30's change to amdump.

1998-07-25  Michael Graff  <explorer@vix.com>

	* changer-src/Makefile.am (install-exec-hook): support $(DESTDIR)
	* client-src/Makefile.am (install-exec-hook): ditto
	* man/Makefile.am (install-data-hook): ditto
	* recover-src/Makefile.am (install-exec-hook): ditto
	* restore-src/Makefile.am (install-exec-hook): ditto
	* server-src/Makefile.am (install-exec-hook): ditto

	* configure.in: link krb5 and com_err in for Kerberos support, if
 	they exist

1998-07-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c (copy_template_file): add braces to 
	remove warning
	* tape-src/tapeio.h: declare is_zftape to remove warning in
	amlabel.c and taper.c

1998-07-23  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/driver.c (any_delayed_disk): new variable, to ensure
	that we do not leave the main driver loop if there are delayed disks 
	but there are no active dumpers
	(main): instead of checking whether idle_reason is IDLE_START_WAIT,
	check whether there is any_delayed_disk for remaining in the loop
	(start_degraded_mode): set any_delayed_disk when needed
	Reported by Peter Walker <peter@talarian.com>

1998-07-23  John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c (main): handle LPRCMD being undefined.

1998-07-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/selfcheck.c (check_suid): new function to check if a
	program is SUID root.
	* client-src/selfcheck.c (check_overall): check that runtar and
	rundump are SUID root.

1998-07-22  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in: version number set to 2.4.1

	* recover-src/Makefile.am (LDADD): libamtape imports symbols from
 	libamanda, so it must be listed first

	* changer-src/Makefile.am (LDADD): remove duplication of libamserver